// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props should assign a ref 1`] = `
<div
  class="css-view-1dbjc4n"
>
  <div
    class="css-text-901oao"
    dir="auto"
    style="font-family: unset;"
  >
    Hello world
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-view-1dbjc4n"
/>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(255, 0, 0); color: rgb(255, 255, 255);"
/>
`;

exports[`props should render correctly with a color CSS prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="background-color: rgb(217, 217, 225); color: rgb(87, 79, 235);"
/>
`;

exports[`props should render correctly with a spacing CSS prop 1`] = `
<div
  class="css-view-1dbjc4n"
  style="margin: 2rem 2rem 2rem 2rem; padding-left: 1rem;"
/>
`;
